--- a/streamstore/pom.xml
+++ b/streamstore/pom.xml
@@ -20,9 +20,10 @@
   <packaging>pom</packaging>
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.apache.bookkeeper</groupId>
-    <artifactId>bookkeeper</artifactId>
-    <version>4.6.0-SNAPSHOT</version>
+    <artifactId>state-store-parent</artifactId>
+    <groupId>org.apache.distributedlog</groupId>
+    <version>0.6.0-SNAPSHOT</version>
+    <relativePath>..</relativePath>
   </parent>
   <groupId>org.apache.bookkeeper</groupId>
   <artifactId>stream-parent</artifactId>
