Move kv api from `stream.api.view.kv` to `api.kv`

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -27,6 +27,9 @@
   <groupId>org.apache.distributedlog</groupId>
   <artifactId>state-store-api</artifactId>
   <name>Apache DistributedLog :: IO :: State Store :: API</name>
+  <properties>
+    <freebuilder.version>1.12.3</freebuilder.version>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>org.apache.bookkeeper</groupId>
@@ -35,6 +38,11 @@
     <dependency>
       <groupId>io.netty</groupId>
       <artifactId>netty-buffer</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.inferred</groupId>
+      <artifactId>freebuilder</artifactId>
+      <version>${freebuilder.version}</version>
     </dependency>
   </dependencies>
 </project>
