--- a/streamstore/api/pom.xml
+++ b/streamstore/api/pom.xml
@@ -37,6 +37,11 @@
       <version>${freebuilder.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.apache.distributedlog</groupId>
+      <artifactId>state-store-api</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.bookkeeper</groupId>
       <artifactId>stream-protocol</artifactId>
       <version>${project.parent.version}</version>
