--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
   <modules>
     <module>common</module>
     <module>api</module>
+    <module>proto</module>
     <module>impl</module>
     <module>streamstore</module>
   </modules>
