--- a/proto/pom.xml
+++ b/proto/pom.xml
@@ -19,12 +19,13 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.apache.bookkeeper</groupId>
-    <artifactId>stream-parent</artifactId>
+    <groupId>org.apache.distributedlog</groupId>
+    <artifactId>state-store-parent</artifactId>
     <version>0.6.0-SNAPSHOT</version>
+    <relativePath>..</relativePath>
   </parent>
-  <artifactId>stream-protocol</artifactId>
-  <name>Apache BookKeeper :: Stream Store :: Protocol</name>
+  <artifactId>state-store-proto</artifactId>
+  <name>Apache DistributedLog :: IO :: State Store :: Proto</name>
 
   <dependencies>
     <dependency>
