--- a/streamstore/client/pom.xml
+++ b/streamstore/client/pom.xml
@@ -28,8 +28,8 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.apache.bookkeeper</groupId>
-      <artifactId>stream-protocol</artifactId>
+      <groupId>org.apache.distributedlog</groupId>
+      <artifactId>state-store-proto</artifactId>
       <version>${project.parent.version}</version>
     </dependency>
     <dependency>
