--- a/storage/pom.xml
+++ b/storage/pom.xml
@@ -20,12 +20,13 @@
   <packaging>pom</packaging>
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.apache.bookkeeper</groupId>
-    <artifactId>stream-parent</artifactId>
+    <groupId>org.apache.distributedlog</groupId>
+    <artifactId>state-store-parent</artifactId>
     <version>0.6.0-SNAPSHOT</version>
+    <relativePath>..</relativePath>
   </parent>
-  <artifactId>stream-storage-parent</artifactId>
-  <name>Apache BookKeeper :: Stream Store :: Storage</name>
+  <artifactId>storage-parent</artifactId>
+  <name>Apache DistributedLog :: IO :: State Store :: Storage</name>
   <modules>
     <module>api</module>
     <module>impl</module>
