--- a/clients/java/all/pom.xml
+++ b/clients/java/all/pom.xml
@@ -24,7 +24,7 @@
     <version>0.6.0-SNAPSHOT</version>
   </parent>
   <artifactId>stream-storage-java-client</artifactId>
-  <name>Apache DistributedLog :: Stream Storage :: Java Client </name>
+  <name>Apache DistributedLog :: Stream Storage :: Clients :: Java Client </name>
 
   <dependencies>
     <dependency>
