--- a/clients/java/base/pom.xml
+++ b/clients/java/base/pom.xml
@@ -24,7 +24,7 @@
     <version>0.6.0-SNAPSHOT</version>
   </parent>
   <artifactId>stream-storage-java-client-base</artifactId>
-  <name>Apache DistributedLog :: Stream Storage :: Java Client :: Base</name>
+  <name>Apache DistributedLog :: Stream Storage :: Clients :: Java Client :: Base</name>
 
   <dependencies>
     <dependency>
