--- a/clients/pom.xml
+++ b/clients/pom.xml
@@ -21,15 +21,13 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.apache.distributedlog</groupId>
-    <artifactId>stream-storage-clients-parent</artifactId>
+    <artifactId>stream-storage-parent</artifactId>
     <version>0.6.0-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
-  <artifactId>stream-storage-java-client-parent</artifactId>
-  <name>Apache DistributedLog :: Stream Storage :: Clients :: Java Client :: Parent</name>
+  <artifactId>stream-storage-clients-parent</artifactId>
+  <name>Apache DistributedLog :: Stream Storage :: Clients :: Parent </name>
   <modules>
-    <module>base</module>
-    <module>kv</module>
-    <module>all</module>
+    <module>java</module>
   </modules>
 </project>
