--- a/storage/api/pom.xml
+++ b/storage/api/pom.xml
@@ -25,7 +25,7 @@
     <relativePath>..</relativePath>
   </parent>
   <artifactId>stream-storage-service-api</artifactId>
-  <name>Apache DistributedLog :: Stream Storage :: Service :: Api</name>
+  <name>Apache DistributedLog :: Stream Storage :: Storage :: Api</name>
 
   <dependencies>
     <dependency>
