--- a/storage/pom.xml
+++ b/storage/pom.xml
@@ -26,7 +26,7 @@
     <relativePath>..</relativePath>
   </parent>
   <artifactId>stream-storage-service-parent</artifactId>
-  <name>Apache DistributedLog :: Stream Storage :: Service :: Parent</name>
+  <name>Apache DistributedLog :: Stream Storage :: Storage :: Parent</name>
   <modules>
     <module>api</module>
     <module>impl</module>
