--- a/storage/impl/pom.xml
+++ b/storage/impl/pom.xml
@@ -35,7 +35,7 @@
     </dependency>
     <dependency>
       <groupId>org.apache.distributedlog</groupId>
-      <artifactId>stream-storage-java-client</artifactId>
+      <artifactId>statelib</artifactId>
       <version>${project.parent.version}</version>
     </dependency>
     <dependency>
