Use local state store to store root range (#6)
* Use statelib to store metadata

* Remove namespace

* Use local state store to store root range

--- a/storage/impl/pom.xml
+++ b/storage/impl/pom.xml
@@ -40,6 +40,11 @@
     </dependency>
     <dependency>
       <groupId>org.apache.distributedlog</groupId>
+      <artifactId>statelib</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.distributedlog</groupId>
       <artifactId>distributedlog-core</artifactId>
       <version>${distributedlog.version}</version>
     </dependency>
