--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
     <grpc.version>1.5.0</grpc.version>
     <guava.version>21.0</guava.version>
     <helix-core.version>0.6.7</helix-core.version>
+    <jcommander.version>1.48</jcommander.version>
     <lombok.version>1.16.18</lombok.version>
     <netty.version>4.1.12.Final</netty.version>
     <protobuf.version>3.4.0</protobuf.version>
@@ -60,6 +61,7 @@
     <module>proto</module>
     <module>clients</module>
     <module>storage</module>
+    <module>server</module>
   </modules>
 
   <dependencyManagement>
@@ -145,6 +147,11 @@
             <artifactId>log4j</artifactId>
           </exclusion>
         </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>com.beust</groupId>
+        <artifactId>jcommander</artifactId>
+        <version>${jcommander.version}</version>
       </dependency>
 
       <!-- test depenencies -->
