Implement table storage using the local mvcc store (#12)

--- a/clients/java/kv/pom.xml
+++ b/clients/java/kv/pom.xml
@@ -32,6 +32,13 @@
       <artifactId>stream-storage-java-client-base</artifactId>
       <version>${project.parent.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.distributedlog</groupId>
+      <artifactId>stream-storage-java-client-base</artifactId>
+      <version>${project.parent.version}</version>
+      <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
   </build>
