--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -40,6 +40,8 @@
     <module>integration-tests-base-groovy</module>
     <module>integration-tests-utils</module>
     <module>integration-tests-topologies</module>
+    <module>backward-compat-upgrade</module>
+    <module>backward-compat-upgrade-direct</module>
   </modules>
   <build>
     <plugins>
