Test that old clients work with new server

--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -43,6 +43,7 @@
     <module>integration-tests-topologies</module>
     <module>backward-compat-upgrade</module>
     <module>backward-compat-upgrade-direct</module>
+    <module>backward-compat-current-server-old-clients</module>
     <module>backward-compat-hierarchical-ledger-manager</module>
   </modules>
   <build>
