--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -45,6 +45,7 @@
     <module>backward-compat-upgrade-direct</module>
     <module>backward-compat-current-server-old-clients</module>
     <module>backward-compat-hierarchical-ledger-manager</module>
+    <module>backward-compat-hostname-bookeid</module>
   </modules>
   <build>
     <plugins>
