Test upgrade with cookies

--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -46,6 +46,7 @@
     <module>backward-compat-current-server-old-clients</module>
     <module>backward-compat-hierarchical-ledger-manager</module>
     <module>backward-compat-hostname-bookieid</module>
+    <module>backward-compat-old-cookie-new-cluster</module>
   </modules>
   <build>
     <plugins>
