Servers formatted without instance id can't join a cluster with instance Id
Replaces TestBackwardCompat#testOldCookieAccessingNewCluster from the old tests.

Master Issue: #903

--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -45,6 +45,7 @@
     <module>backward-compat-hierarchical-ledger-manager</module>
     <module>backward-compat-hostname-bookieid</module>
     <module>backward-compat-recovery-no-password</module>
+    <module>backward-compat-old-cookie-new-cluster</module>
   </modules>
   <build>
     <plugins>
