--- a/bookkeeper-dist/server/pom.xml
+++ b/bookkeeper-dist/server/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <artifactId>bookkeeper-dist</artifactId>
     <groupId>org.apache.bookkeeper</groupId>
-    <version>4.6.1</version>
+    <version>4.6.1-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
 
