--- a/tests/backward/pom.xml
+++ b/tests/backward/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.apache.bookkeeper.tests</groupId>
     <artifactId>tests-parent</artifactId>
-    <version>4.6.1</version>
+    <version>4.6.1-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
   <artifactId>backward-test</artifactId>
