Ledgers without masterkey in metadata can't be recovered
Test that ledgers, created without a master key in the metadata, cannot be recovered until
the master key is known.

Replaces TestBookieRecovery from the old tests.

Master Issue: #903

--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -43,6 +43,7 @@
     <module>backward-compat-upgrade</module>
     <module>backward-compat-upgrade-direct</module>
     <module>backward-compat-hierarchical-ledger-manager</module>
+    <module>backward-compat-recovery-no-password</module>
   </modules>
   <build>
     <plugins>
