Recovery without password test

--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -47,6 +47,7 @@
     <module>backward-compat-hierarchical-ledger-manager</module>
     <module>backward-compat-hostname-bookieid</module>
     <module>backward-compat-old-cookie-new-cluster</module>
+    <module>backward-compat-recovery-no-password</module>
   </modules>
   <build>
     <plugins>
