--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -137,6 +137,10 @@
       <version>4.1</version>
     </dependency>
     <dependency>
+      <groupId>com.beust</groupId>
+      <artifactId>jcommander</artifactId>
+    </dependency>
+    <dependency>
       <groupId>net.java.dev.jna</groupId>
       <artifactId>jna</artifactId>
       <version>3.2.7</version>
