Test compatibility between old hierarchical ledger manager and current
Ensures that the current client and server can handle ledgers created by the
hierarchical ledger manager from 4.2.0.

Replaces TestBackwardCompat#testCompatHierarchicalLedgerManager from old tests

Master Issue: #903

Author: Ivan Kelly <ivank@apache.org>

Reviewers: Sijie Guo <sijie@apache.org>

This patch had conflicts when merged, resolved by
Committer: Sijie Guo <sijie@apache.org>

This closes #1029 from ivankelly/bc-heir

--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -42,6 +42,7 @@
     <module>integration-tests-topologies</module>
     <module>backward-compat-upgrade</module>
     <module>backward-compat-upgrade-direct</module>
+    <module>backward-compat-hierarchical-ledger-manager</module>
   </modules>
   <build>
     <plugins>
