--- a/clients/java/kv/pom.xml
+++ b/clients/java/kv/pom.xml
@@ -34,6 +34,11 @@
     </dependency>
     <dependency>
       <groupId>org.apache.distributedlog</groupId>
+      <artifactId>statelib</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.distributedlog</groupId>
       <artifactId>stream-storage-java-client-base</artifactId>
       <version>${project.parent.version}</version>
       <type>test-jar</type>
