Provide a standalone cluster and a storage cli to interact with it (#19)

--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
     <module>clients</module>
     <module>storage</module>
     <module>server</module>
+    <module>cli</module>
     <module>tests</module>
   </modules>
 
