--- a/server/pom.xml
+++ b/server/pom.xml
@@ -33,6 +33,11 @@
       <version>${project.parent.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.apache.distributedlog</groupId>
+      <artifactId>stream-storage-java-client</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
+    <dependency>
       <groupId>com.beust</groupId>
       <artifactId>jcommander</artifactId>
     </dependency>
