--- a/tests/backward-compat/upgrade-direct/pom.xml
+++ b/tests/backward-compat/upgrade-direct/pom.xml
@@ -22,15 +22,14 @@
   http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.apache.bookkeeper.tests</groupId>
-    <artifactId>integration-tests-base-groovy</artifactId>
+    <groupId>org.apache.bookkeeper.tests.backward-compat</groupId>
+    <artifactId>tests-parent</artifactId>
     <version>4.7.0-SNAPSHOT</version>
-    <relativePath>../integration-tests-base-groovy</relativePath>
   </parent>
 
-  <groupId>org.apache.bookkeeper.tests</groupId>
-  <artifactId>backward-compat-hierarchical-ledger-manager</artifactId>
+  <groupId>org.apache.bookkeeper.tests.backward-compat</groupId>
+  <artifactId>upgrade-direct</artifactId>
   <packaging>jar</packaging>
-  <name>Apache BookKeeper :: Tests :: Test compat between old version and new version of hierarchical ledger manager</name>
+  <name>Apache BookKeeper :: Tests :: Backward Compatibility :: Test upgrade between 4.1.0 and current version</name>
 
 </project>
