--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -36,12 +36,7 @@
     <module>integration-tests-base-groovy</module>
     <module>integration-tests-utils</module>
     <module>integration-tests-topologies</module>
-    <module>backward-compat-upgrade</module>
-    <module>backward-compat-upgrade-direct</module>
-    <module>backward-compat-hierarchical-ledger-manager</module>
-    <module>backward-compat-hostname-bookieid</module>
-    <module>backward-compat-recovery-no-password</module>
-    <module>backward-compat-old-cookie-new-cluster</module>
+    <module>backward-compat</module>
   </modules>
   <build>
     <plugins>
