--- a/stream/distributedlog/distributedlog-core/pom.xml
+++ b/stream/distributedlog/distributedlog-core/pom.xml
@@ -20,10 +20,10 @@
   <parent>
     <groupId>org.apache.distributedlog</groupId>
     <artifactId>distributedlog</artifactId>
-    <version>0.6.0-SNAPSHOT</version>
+    <version>4.7.0-SNAPSHOT</version>
   </parent>
   <artifactId>distributedlog-core</artifactId>
-  <name>Apache DistributedLog :: Core Library</name>
+  <name>Apache BookKeeper :: DistributedLog :: Core Library</name>
   <dependencies>
     <dependency>
       <groupId>org.apache.distributedlog</groupId>
@@ -62,7 +62,7 @@
     <dependency>
       <groupId>org.apache.bookkeeper</groupId>
       <artifactId>bookkeeper-server</artifactId>
-      <version>${bookkeeper.version}</version>
+      <version>${project.parent.version}</version>
       <type>jar</type>
       <exclusions>
         <exclusion>
@@ -474,13 +474,13 @@
             <version>${puppycrawl.checkstyle.version}</version>
           </dependency>
           <dependency>
-            <groupId>org.apache.distributedlog</groupId>
-            <artifactId>distributedlog-build-tools</artifactId>
-            <version>${project.version}</version>
+            <groupId>org.apache.bookkeeper</groupId>
+            <artifactId>buildtools</artifactId>
+            <version>${project.parent.version}</version>
           </dependency>
         </dependencies>
         <configuration>
-          <configLocation>distributedlog/checkstyle.xml</configLocation>
+          <configLocation>bookkeeper/checkstyle.xml</configLocation>
           <suppressionsLocation>distributedlog/suppressions.xml</suppressionsLocation>
           <consoleOutput>true</consoleOutput>
           <failOnViolation>true</failOnViolation>
