make distributedlog compilable

--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,7 @@
     <module>tests</module>
     <module>bookkeeper-dist</module>
     <module>microbenchmarks</module>
+    <module>stream/distributedlog</module>
   </modules>
   <mailingLists>
     <mailingList>
