--- a/stream/distributedlog/pom.xml
+++ b/stream/distributedlog/pom.xml
@@ -21,6 +21,7 @@
     <groupId>org.apache.bookkeeper</groupId>
     <artifactId>bookkeeper</artifactId>
     <version>4.7.0-SNAPSHOT</version>
+    <relativePath>../..</relativePath>
   </parent>
   <groupId>org.apache.distributedlog</groupId>
   <artifactId>distributedlog</artifactId>
