--- a/bookkeeper-server/conf/bk_server.conf
+++ b/bookkeeper-server/conf/bk_server.conf
@@ -469,8 +469,19 @@ ledgerManagerFactoryClass=org.apache.bookkeeper.meta.HierarchicalLedgerManagerFa
 # this threshold will be compacted in a major compaction.
 # Those entry log files whose remaining size percentage is still
 # higher than the threshold will never be compacted.
-# If it is set to less than zero, the minor compaction is disabled.
+# If it is set to less than zero, the major compaction is disabled.
 # majorCompactionThreshold=0.8
+
+#when assign a valide cron expression to medianMajorCompactionCron, the majorCompactionThreshold
+#will be bump to majorMedianCompactionThreshold when the major compation time belongs to the time
+#which is expressed by medianMajorCompactionCron. So does highMajorCompactionCron's usage.
+#Note the restriction: majorCompactionThreshold<=majorMedianCompactionThreshold<=majorHighCompactionThreshold
+#When enable cron based major compaction, it's better to set majorCompactionThreshold more smaller and
+#do more compaction work on the time specified by cron.
+#medianMajorCompactionCron=
+#majorMedianCompactionThreshold=0.85
+#highMajorCompactionCron=
+#majorHighCompactionThreshold=0.9
 
 # Interval to run major compaction, in seconds
 # If it is set to less than zero, the major compaction is disabled.
